--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "MaghsoudiM\\Todopackage\\": "src/"
+            "mmaghsoudi\\Todopackage\\": "src/"
         }
     },
     "authors": [
@@ -16,6 +16,6 @@
     ],
     "require": {
         "php": "^7.2.5|^8.0",
-        "laravel/framework": "^7.*|^8.*|^9.*"
+        "laravel/framework": "7.*|8.*|9.*"
     }
 }
