--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,12 @@
     "require": {
         "php": "^7.2.5|^8.0",
         "laravel/framework": "7.*|8.*|9.*"
+    },
+    "extra": {
+        "laravel":{
+            "providers": [
+                "meysammaghsoudi\\Todopackage\\ToDoServiceProvider"
+            ]
+        }
     }
 }
