--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
         "laravel":{
             "providers": [
                 "meysammaghsoudi\\Todopackage\\ToDoServiceProvider"
+            ],
+            "dont-discover": [
+                "meysammaghsoudi/todopackage"
             ]
         }
     }
